manifests/backup-resources/apexkube-website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2025-02-05T19:54:31Z"
  generation: 1
  labels:
    app: apexkube-website
    app.kubernetes.io/instance: apexkube-website
  name: apexkube-website
  namespace: woodez
  resourceVersion: "5867480"
  uid: 4f18e65f-c263-4b08-a4ad-8157c35bc0ef
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: apexkube-website
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: apexkube-website
    spec:
      containers:
      - image: kwood475/apexkube-website:latest
        imagePullPolicy: Always
        name: apexkube-website
        ports:
        - containerPort: 443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-02-05T19:55:08Z"
    lastUpdateTime: "2025-02-05T19:55:08Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-02-05T19:54:31Z"
    lastUpdateTime: "2025-02-05T19:55:08Z"
    message: ReplicaSet "apexkube-website-5bf5b485b" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
