manifests/backup-resources/apexkube-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2025-02-05T19:54:31Z"
  labels:
    app: apexkube-website
    app.kubernetes.io/instance: apexkube-website
  name: apexkube-website-service
  namespace: woodez
  resourceVersion: "6234227"
  uid: d85059f4-a943-401b-b713-5973e87e7508
spec:
  clusterIP: 10.96.104.150
  clusterIPs:
  - 10.96.104.150
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: apexkube-website
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
